# LaserTrapping

./: .gitignore  CMakeLists.txt  Diamond.cpp  Diamond.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  Only.h  README.md  WindowsProject1.cpp  brightnessclass.cpp  brightnessclass.h  cameraonly.cpp  cameraonly.h  daqanalog.h  depositionclass.cpp  depositionclass.h  main.cpp  only.cpp  only.h  preference.cpp  preference.h
